--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,16 +1,24 @@
-<!-- <div class="cards-container">
+
+<div class="cards-container">
     <div *ngFor="let breed of breeds" class="card">
         <h1>{{breed.name}}</h1><br>
         <img src="{{breed.image.url}}" alt="">
         <p>{{breed.description}}</p>
+        <button (click)="favouriteCat(breed.image.id)">Favoritar</button>
         <a>Ler mais</a>
     </div>
-</div> -->
-
+</div>
+<br><br><br>
+<div>
+    <div *ngFor="let favourite of favouritedCats">
+        <img src="{{favourite.image.url}}" alt="">
+    </div>
+</div>
+<!-- 
 <div class="cards-container">
     <div *ngFor="let cat of cats" class="card">
         <h1>{{cat.id}}</h1><br>
         <img src="{{cat.url}}" alt="">
         <a>Ler mais</a>
     </div>
-</div>
+</div> -->
