--- a/src/app/components/main/main.component.scss
+++ b/src/app/components/main/main.component.scss
@@ -5,8 +5,8 @@
 .card{
     display: flex;
     flex-direction: column;
-    max-width: '100px';
+    max-width: 300px;
 }
 .card image{
-    max-height: '200px';
+    max-height: 200px;
 }
