--- a/src/app/components/main/main.component.scss
+++ b/src/app/components/main/main.component.scss
@@ -1,12 +1,12 @@
 .cards-container{
     display: flex;
-    flex-wrap: wrap;
-}
-.card{
-    display: flex;
     flex-direction: column;
-    max-width: 300px;
 }
-.card image{
-    max-height: 200px;
+.card {
+    max-width: 400px;
+  }
+  
+.example-header-image {
+background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
+background-size: cover;
 }
